2011-03-03 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Security fix, please update
2011-02-20 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Optimizations
2011-02-20 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Bugfix on eid list
2012-02-13 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Add areports to check database integrity (like install tool)
	* Another refactoring
	* Small features on a lot of reports :-)
2012-01-02 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Fix deprecated functions of the install tool
2011-12-24 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Bugfix on conf update check
2011-11-24 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* In status report : add some features like apache user/group, status of the mysql cache, db size...
2011-11-09 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* new feature : check if an extension need ext conf update (usefull after mass update)
2011-10-27 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Add the number of pages for each domain
2011-10-14 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Update the mod1 for 4.3< versions
	* Add a query to flush errors log
2011-10-07 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Fix for TYPO3 4.6 compatibility
2011-10-04 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Add a new report : check your websites/domains/baseURL configuration
	* Fix the pagebrowser in errors log
2011-08-30 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* In plugin list view, you can now switch into the list or page module
	* In "List of used content types" & "List of used plugins", do not display offline pages
	* In "List of used content types" & "List of used plugins", add first domain record
2011-08-16 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Small bugfix in the ExtDirect reports
2011-08-15 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Add the PHP errors log
	* Change the extensions reports
	* In the extensions reports, add the possibility to check in the emconf if the extension is declared compatible with the current TYPO3 version