@@ -65,8 +65,8 @@ class tx_additionalreports_clikeys implements tx_reports_Report
 
 }
 
-if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/additional_reports/reports_clikeys/class.tx_additionalreports_clikeys.php']) {
-	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/additional_reports/reports_clikeys/class.tx_additionalreports_clikeys.php']);
+if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/additional_reports/reports/reports_clikeys/class.tx_additionalreports_clikeys.php']) {
+	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/additional_reports/reports/reports_clikeys/class.tx_additionalreports_clikeys.php']);
 }
 
 ?>
